--- a/src/main/resources/assets/naswaymod/lang/ru_ru.json
+++ b/src/main/resources/assets/naswaymod/lang/ru_ru.json
@@ -1,4 +1,6 @@
 {
   "item.naswaymod.nasway": "Насвай",
-  "block.naswaymod.nasway_block": "Блок Насвая"
+  "block.naswaymod.nasway_block": "Блок Насвая",
+  "item.naswaymod.nasway_elite": "Элитный Насвай",
+  "block.naswaymod.nasway_elite_block": "Блок Элитного Насвая"
 }
