--- a/src/main/resources/assets/naswaymod/lang/ru_ru.json
+++ b/src/main/resources/assets/naswaymod/lang/ru_ru.json
@@ -2,5 +2,6 @@
   "item.naswaymod.nasway": "Насвай",
   "block.naswaymod.nasway_block": "Блок Насвая",
   "item.naswaymod.nasway_elite": "Элитный Насвай",
-  "block.naswaymod.nasway_elite_block": "Блок Элитного Насвая"
+  "block.naswaymod.nasway_elite_block": "Блок Элитного Насвая",
+  "item.naswaymod.nasway_bad": "Палёный Насвай"
 }
