--- a/src/main/resources/assets/naswaymod/lang/en_us.json
+++ b/src/main/resources/assets/naswaymod/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.naswaymod.nasway": "Nasway",
   "block.naswaymod.nasway_block": "Nasway Block",
   "item.naswaymod.nasway_elite": "Elite Nasway",
-  "block.naswaymod.nasway_elite_block": "Elite Nasway Block"
+  "block.naswaymod.nasway_elite_block": "Elite Nasway Block",
+  "item.naswaymod.nasway_bad": "Counterfeit Nasway"
 }
